Fixed alignment

--- a/content/.vuepress/theme/styles/content.scss
+++ b/content/.vuepress/theme/styles/content.scss
@@ -132,7 +132,7 @@
   }
 
   .next a {
-    justify-content: flex-end;
+    text-align: right;
 
     img {
       margin-left: 2rem;
